kubernetes/infra/manifests/ingresses/argocd.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: cilium-gateway
      kind: Gateway
      namespace: kube-system
  hostnames:
    - "argocd.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
