kubernetes/infra/manifests/ingresses/proxmox.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: infra
spec:
  ports:
  - protocol: TCP
    port: 8006
    targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: infra
subsets:
- addresses:
  - ip: 192.168.0.10
  - ip: 192.168.0.11
  - ip: 192.168.0.12
  ports:
  - port: 8006
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox-route
  namespace: infra
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - "proxmox.local.ildoc.it"
  rules:
  - backendRefs:
    - name: proxmox-external
      port: 8006
