kubernetes/infra/manifests/ingresses/rancher.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-route
  namespace: cattle-system
spec:
  parentRefs:
  - name: traefik-gateway
    kind: Gateway
    namespace: traefik
  hostnames:
    - "rancher.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # filters:
      #   - type: ExtensionRef
      #     extensionRef:
      #       group: traefik.io
      #       kind: Middleware
      #       name: default-headers
      #       namespace: default
      backendRefs:
        - name: rancher
          port: 443
