kubernetes/infra/manifests/ingresses/traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard-route
  namespace: traefik
spec:
  parentRefs:
  - name: traefik-gateway
    kind: Gateway
  hostnames:
    - "traefik.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # filters:
      #   - type: ExtensionRef
      #     extensionRef:
      #       group: traefik.io
      #       kind: Middleware
      #       name: default-headers
      backendRefs:
        - name: traefik
          port: 443
