kubernetes/infra/manifests/ingresses/truenas.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-truenas-service
spec:
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-truenas-service
subsets:
- addresses:
  - ip: 192.168.0.123
  ports:
  - port: 80
    
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-truenas-route
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      kind: Gateway
  hostnames:
    - "traefik.local.ildoc.it"
  rules:
    - backendRefs:
        - name: external-truenas-service
          port: 80
